--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="hobbies.html">My Hobbies</a></li>
         <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="hacking-with-swift.html">Hacking with Swift</a></li>
       </ul>
     </nav>
   </header>
