--- a/hacking-with-swift.html
+++ b/hacking-with-swift.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js"></script>
-  <title>My Portfolio</title>
+  <title>Hacking with Swift</title>
 </head>
 <body>
   <header>
@@ -22,10 +21,30 @@
   </header>
   
   <main>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Highly motivated and skilled iOS developer with a proven track record of creating innovative and user-friendly mobile applications.</p>
-    <p>...</p>
-    <div id="slideshow"></div>
+    <h1>Hacking with Swift</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Progress</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>January 1, 2023</td>
+          <td>Completed Chapter 1</td>
+        </tr>
+        <tr>
+          <td>January 7, 2023</td>
+          <td>Completed Chapter 2</td>
+        </tr>
+        <tr>
+          <td>January 15, 2023</td>
+          <td>Completed Chapter 3</td>
+        </tr>
+        <!-- Add more rows as needed -->
+      </tbody>
+    </table>
   </main>
 
   <footer>
