Changed the main of index.html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
   </header>
   
   <main>
-    <h1>Welcome to My Portfolio</h1>
-    <p>Highly motivated and skilled iOS developer with a proven track record of creating innovative and user-friendly mobile applications.</p>
-    <p>...</p>
-    <div id="slideshow"></div>
+    <h1>iOS Developer Portfolio</h1>
+    <p>Welcome to my iOS developer portfolio! I'm passionate about creating innovative and user-centric mobile applications for the iOS platform. With a strong foundation in iOS development and a keen eye for elegant design, I strive to deliver exceptional experiences that make a lasting impact.</p>
+    <p>Throughout my journey as an iOS developer, I have honed my skills in Swift programming language, UIKit, and various frameworks, allowing me to bring ideas to life and craft seamless user interfaces. My attention to detail, combined with my problem-solving mindset, enables me to tackle complex challenges and deliver robust solutions.</p>
+    <p>As you explore my portfolio, you'll find a showcase of my projects that highlight my ability to create engaging and intuitive iOS applications. From sleek weather apps that deliver real-time forecasts, to practical utility apps like timers and calculators, I have embraced diverse project opportunities to broaden my expertise.</p>
+    <p>I believe that great apps are built through collaboration, and I thrive in dynamic and cross-functional teams. I'm always eager to collaborate with designers, product managers, and fellow developers to create extraordinary experiences that exceed expectations.</p>
+    <p>Beyond my technical skills, I'm dedicated to continuous learning and staying up-to-date with the latest advancements in iOS development. I actively engage with the iOS developer community, attending conferences and participating in online forums to share knowledge and gain insights.</p>
+    <p>Thank you for visiting my portfolio. I invite you to explore my projects, delve into my technical expertise, and get a glimpse of my passion for iOS development. Let's connect and discuss how we can create remarkable experiences together.</p>
   </main>
 
   <footer>
